Used virtual threads