@@ -22,7 +22,6 @@ import java.util.List;
 import java.util.Map;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
-import java.util.concurrent.ThreadPoolExecutor;
 
 import static com.degressly.proxy.core.Constants.DEGRESSLY_CACHE_POPULATION_REQUEST;
 import static com.degressly.proxy.core.Constants.TRACE_ID;
@@ -41,7 +40,7 @@ public class DefaultReplayHandlerImpl implements ReplayHandler {
 	@Value("${degressly.downstream.host}")
 	private String downstreamHost;
 
-	private final ExecutorService outgoingExecutorService = Executors.newCachedThreadPool();
+	private final ExecutorService outgoingExecutorService = Executors.newVirtualThreadPerTaskExecutor();
 
 	private final ExecutorService incomingExecutorService = Executors.newSingleThreadExecutor();
 
